--- a/style/style.css
+++ b/style/style.css
@@ -6,3 +6,12 @@
 body{
     /* background: #303030; */
 }
+.blue3{
+    background: #402E7A;
+}
+.blue2{
+    background: #4C3BCF;
+}
+.blue1{
+    background: #4B70F5;
+}
